@@ -1,5 +1,5 @@
 #HSQL database
-#Thu Apr 14 14:06:46 EEST 2005
+#Thu Apr 14 14:19:30 EEST 2005
 hsqldb.cache_file_scale=1
 runtime.gc_interval=0
 hsqldb.first_identity=0
